WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133749
WebKit2 iOS: Unable to open UI menu for "open in new tab" for links on yahoo.com
https://bugs.webkit.org/show_bug.cgi?id=133749
Summary
WebKit2 iOS: Unable to open UI menu for "open in new tab" for links on yahoo.com
Enrica Casucci
Reported
2014-06-11 10:46:53 PDT
This is a problem on iPad only. Tap and hold on a link on the yahoo page does not show the link menu popover. <
rdar://problem/17165992
>
Attachments
Patch
(1.66 KB, patch)
2014-06-11 10:49 PDT
,
Enrica Casucci
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-06-11 10:49:32 PDT
Created
attachment 232873
[details]
Patch
Enrica Casucci
Comment 2
2014-06-11 11:06:56 PDT
Committed revision 169813.
Darin Adler
Comment 3
2014-06-18 11:01:29 PDT
Comment on
attachment 232873
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232873&action=review
> Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:1698 > + info.url = [(NSURL *)linkElement->document().completeURL(stripLeadingAndTrailingHTMLSpaces(linkElement->getAttribute(HTMLNames::hrefAttr))) absoluteString];
What does “encoded” mean? Why is conversion to an NSURL the best way to do this? Why is absoluteString the right method to use rather than, say, the userVisibleString function?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug