WebKit2 iOS: Unable to open UI menu for "open in new tab" for links on yahoo.com. https://bugs.webkit.org/show_bug.cgi?id=133749 <rdar://problem/17165992>

Reviewed by Brady Eidson.

The URL returned to the UIProcess as string needs to be encoded.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::getPositionInformation):



Canonical link: https://commits.webkit.org/151715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169813 268f45cc-cd09-0410-ab3c-d52691b4dbfc